--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -9,6 +9,7 @@
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
     android:layout_marginTop="8dp"
+    android:stateListAnimator="@anim/pressed_card"
     card_view:cardCornerRadius="4dp">
 
     <LinearLayout
