This big commit adds new features to the app (Don't look, Cluncky code!!): - Show posts from a test site of mine. - Add the ability ofpublish a new post on the site.

--- a/app/src/main/res/layout/activity_post_list.xml
+++ b/app/src/main/res/layout/activity_post_list.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent">
 
         <fragment
-            android:id="@+id/list"
+            android:id="@+id/postList"
             android:name="org.wordpress.pioupiou.postlist.PostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
