changed actionId in PersistentEditText and set the 2fa code edittext to not persist data

--- a/app/src/main/res/layout/fragment_two_factor_auth.xml
+++ b/app/src/main/res/layout/fragment_two_factor_auth.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:hint="@string/prompt_code"
-        android:imeActionId="@+id/login"
+        android:imeActionId="@+id/checkTwoFactorCode"
         android:imeActionLabel="@string/action_login"
         android:imeOptions="actionUnspecified"
         android:inputType="number"
