set 2fa code EditText to not persist data

--- a/app/src/main/res/layout/fragment_two_factor_auth.xml
+++ b/app/src/main/res/layout/fragment_two_factor_auth.xml
@@ -30,7 +30,7 @@
         android:inputType="number"
         android:maxLines="1"
         android:maxLength="6"
-        app:persistenceEnabled="true"
+        app:persistenceEnabled="false"
         tools:text="ponyman" />
 
     <Button
