changed ui controls ids for better handling and now onEditorAction actions only to be executed once by checking for the keyEvent only on key_down

--- a/app/src/main/res/layout/fragment_two_factor_auth.xml
+++ b/app/src/main/res/layout/fragment_two_factor_auth.xml
@@ -34,7 +34,7 @@
         tools:text="ponyman" />
 
     <Button
-        android:id="@+id/login_button"
+        android:id="@+id/login_button_2fa"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
