--- a/app/src/main/res/layout/fragment_url_check.xml
+++ b/app/src/main/res/layout/fragment_url_check.xml
@@ -32,7 +32,7 @@
         app:persistenceEnabled="true" />
 
     <Button
-        android:id="@+id/login_button"
+        android:id="@+id/next_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
